--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,31 @@
-<footer class="bg-teal text-white py-8">
-	<div class="container text-center">
-	  <p class="text-lg">&copy; 2025 MyGuarantee</p>
-	  <div class="mt-4 space-x-6">
-		<a href="/privacy" class="text-white hover:underline">Privacy</a>
-		<a href="/legals" class="text-white hover:underline">Legals</a>
-	  </div>
-	</div>
-  </footer>
-  
-  <style>
-	.container {
-	  @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
-	}
-  </style>
+---
+
+---
+
+<footer class="bg-black text-white py-6 sm:py-8 md:py-8">
+  <div class="container text-center">
+    <p class="text-base sm:text-base md:text-lg mb-2">
+      &copy; 2025 MyGuarantee
+    </p>
+    <div
+      class="flex flex-col sm:flex-row justify-center space-y-2 sm:space-y-0 sm:space-x-6"
+    >
+      <a
+        href="/privacy"
+        class="text-white hover:underline text-base sm:text-base md:text-lg"
+        >Privacy</a
+      >
+      <a
+        href="/legals"
+        class="text-white hover:underline text-base sm:text-base md:text-lg"
+        >Legals</a
+      >
+    </div>
+  </div>
+</footer>
+
+<style>
+  .container {
+    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
+  }
+</style>
