--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,8 +16,8 @@ import '../styles/global.css';  // Add this line here
       <div class="container flex justify-between items-center">
         <div class="logo text-3xl font-bold text-primary-blue">MyGuarantee</div>
         <nav class="space-x-4">
-          <a href="#" class="button">About us</a>
-          <a href="#" class="button">News</a>
+          <a href="/about" class="button">About us</a>
+          <a href="/news" class="button">News</a>
           <a href="#" class="button">Login</a>
           <a href="#" class="button">Continue ID Verification</a>
         </nav>
