--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -25,7 +25,7 @@ import Footer from "../../components/Footer.astro";
         Infrastructure that supports an industry requested solution to resolve
         the issues of physical bank guarantees.
       </p>
-      <a href="#" class="button inline-block bg-lime-green text-text-black"
+      <a href="/contact" class="button inline-block bg-lime-green text-text-black"
         >Contact us</a
       >
     </div>
